# big

./: .gitignore  Cargo.toml  README.md  parse_colors.py  term_colors.txt
fonts/Montserrat/: FONT_LICENSE.md
src/: color.rs  effects.rs  main.rs  pixels.rs
